white space fix & tips responsive try (not done)

--- a/src/pages/getting-around-campus/index.module.css
+++ b/src/pages/getting-around-campus/index.module.css
@@ -72,7 +72,7 @@
   height: 600px;
   margin-top: 100px;
 }
-@media (max-width: 1168px) {
+@media (max-width: 1284px) {
   .all {
     width: 100%;
   }
