--- a/src/pages/getting-around-sg/[subPage]/index.module.css
+++ b/src/pages/getting-around-sg/[subPage]/index.module.css
@@ -91,7 +91,7 @@
   background-color: white;
 }
 
-@media (max-width: 1168px) {
+@media (max-width: 1284px) {
   .all {
     width: 100%;
   }
