--- a/src/pages/getting-around-sg/index.module.css
+++ b/src/pages/getting-around-sg/index.module.css
@@ -84,7 +84,7 @@
   background-color: white;
 }
 
-@media (max-width: 1168px) {
+@media (max-width: 1284px) {
   .all {
     width: 100%;
   }
