--- a/src/pages/preparation-guide/index.module.css
+++ b/src/pages/preparation-guide/index.module.css
@@ -365,7 +365,7 @@
   background-color: white;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1284px) {
   .container {
     width: 100%;
   }
